# refwave

./: .gitignore  README.md
backend/: .env.sample  Cargo.toml
backend/migrations/: 20230927203145_update_users.sql  20231003063623_up.sql.sql  20231007053921_users.sql.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  server_sent.rs  sse.rs  startup.rs
backend/src/routes/: health_check.rs  mod.rs  server_sent.rs  signup.rs  users.rs  view.rs
backend/tests/: health_check.rs  signup.rs  sse.rs  view.rs
frontend/: package-lock.json
frontend/src/: root.tsx
frontend/src/routes/: [...404].tsx  index.tsx  login.tsx  referralSignup.tsx  signup.tsx
scripts/: load-test.ts  package-lock.json  package.json
