[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tower-log"] }
axum-macros = "0.3.8"
clap = { version = "4.4.5", features = ["env", "derive"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["postgres","runtime-tokio-native-tls", "macros", "chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
jsonwebtoken = "8.3.0"
